--- a/prism_project/base.html
+++ b/prism_project/base.html
@@ -54,7 +54,7 @@
                 </div>
                 <!-- Sidebar -->
                 <div class="col-md-4">
-                    <div class="content-section">
+                    <div class="content-section" style="padding-top:10px">
                         <h3>Our Sidebar</h3>
                         <p class='text-muted'>You can put any information here you'd like.
                         <ul class="list-group">
